infrastructure/dev/istio/mesh-policy/templates/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - "grafana.go-ti.shop"
  gateways:
    - istio-system/goti-shared-gateway
  http:
    - route:
        - destination:
            host: kube-prometheus-stack-dev-grafana.monitoring.svc.cluster.local
            port:
              number: 80
